# Pydator.py

./: .editorconfig  .gitignore  README.md  pyproject.toml
dately/: main.py
tests/: test_dately.py
