[tool.poetry]
name = "pydator"
version = "0.1.0"
description = "A simple-to-use and intuitive date-time library for Python"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
